--- a/app.json
+++ b/app.json
@@ -1,22 +1,30 @@
 {
-    "expo": {
-      "name": "react-native-expo-starter",
-      "slug": "react-native-expo-starter",
-      "version": "1.0.0",
-      "orientation": "portrait",
-      "scheme": "myapp",
-      "userInterfaceStyle": "automatic",
-      "newArchEnabled": true,
-      "ios": {
-        "supportsTablet": true
-      },
-      "web": {
-        "bundler": "metro",
-        "output": "single",
-      },
-      "plugins": ["expo-router"],
-      "experiments": {
-        "typedRoutes": true
+  "expo": {
+    "name": "react-native-expo-starter",
+    "slug": "react-native-expo-starter",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "scheme": "myapp",
+    "userInterfaceStyle": "automatic",
+    "newArchEnabled": true,
+    "ios": {
+      "supportsTablet": true
+    },
+    "web": {
+      "bundler": "metro",
+      "output": "single"
+    },
+    "plugins": [
+      "expo-router"
+    ],
+    "experiments": {
+      "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "92edeaa4-1e87-4d40-b1b9-a93ed8ca97d2"
       }
     }
   }
+}
